--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,13 @@ input#Reset {
     display: table;
     clear: both;
 }
+
+.resultados {
+
+width: 300px;
+
+margin-left: 900px;
+
+margin-top: -150px;
+
+}
