beta 5 fixed some references

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ input[type="button"] {
     border: solid 1px #444;
 }
 
-#go {
+#Start {
     margin-top: -115px;
     margin-right: 600px;
     padding-left: 80px;
